--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@aloshy-ai/humanoid-alert",
+  "description": "Hostile AI Agent Project",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -26,6 +27,7 @@
     "eslint-config-next": "14.2.16",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vercel": "^39.1.2"
   }
 }
